
* (MB-4564) during failover and rebalance out couchbase server now
  leaves data files. So that accident failover does not leads to
  catastrophic data loss. Those files are deleted when node is
  rebalanced back in or becomes independent single-node cluster.

* (MB-4967) couchbase_num_vbuckets_default ns_config variable (absent
  by default) can now be used to change number of vbuckets for any
  couchbase buckets created after that change. The only way to change
  it is via /diag/eval.

* mastership takeover is now clearly logged

* (MB-4960) mem_used and some other stats are now displayed on UI

* (MB-5050) autofailover service is now aware that it's not possible
  to fail over during rebalance

* (MB-5063) couchbase server now disallows attempts to rebalance out
  unknown nodes instead of misbehaving

* (MB-5019) bug when create bucket dialog was displaying incorrect
  remaining quote right after bucket deletion is now fixed

* internal cluster management stats counters facility was
  implemented. The only way so far to see those stats is in diags or
  by posting 'system_stats_collector:get_ns_server_stats().' to
  /diag/eval. So far only few stats related to reliable replica
  building during rebalance are gathered.

* diags now have tap & checkpoint stats from memcached on all nodes

* local tap & checkpoints stats are now logged after rebalance and
  each 30 seconds during rebalance

* (MB-5256) but with alert not being generated for failures to save
  item mutatins to disk was fixed

* (MB-5275) bug with alerts not being shown to user sometimes was fixed

* (MB-5408) ns_memcached now implements smarter queuing and
  prioritization of heavy & light operations. Leading to hopefully
  much less memcached timeouts. Particularly vbucket delete operation
  is known to be heavy. By running it on separate worker we allow
  stats requests to be performed without delays and thus hopefully
  without hitting timeouts.