@@ -53,6 +53,9 @@ child_specs() ->
      {ns_log, {ns_log, start_link, []},
       permanent, 1000, worker, [ns_log]},
 
+     {ns_config_ets_dup, {ns_config_ets_dup, start_link, []},
+      permanent, brutal_kill, worker, [ns_config, ns_config_ets_dup]},
+
      {ns_log_events, {gen_event, start_link, [{local, ns_log_events}]},
       permanent, 1000, worker, dynamic},
 
